--- a/WFD/.env.dist
+++ b/WFD/.env.dist
@@ -4,7 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=06ed64b9782bedf0a8920de1f7b0ba35
+APP_SECRET=7ed1521e5b83adf666916f0dcd55afd3
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
@@ -13,5 +13,5 @@ APP_SECRET=06ed64b9782bedf0a8920de1f7b0ba35
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/burger
 ###< doctrine/doctrine-bundle ###
