--- a/WFD/.gitignore
+++ b/WFD/.gitignore
@@ -1,13 +1,13 @@
 
 ###> symfony/framework-bundle ###
-.env
+/.env
 /public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
 
 ###> symfony/web-server-bundle ###
-.web-server-pid
+/.web-server-pid
 ###< symfony/web-server-bundle ###
 
 ###> symfony/phpunit-bridge ###
