--- a/WFD/composer.json
+++ b/WFD/composer.json
@@ -4,23 +4,31 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "koff/crud-maker-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^4.0",
+        "symfony/security-csrf": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
-        "symfony/dotenv": "^4.0",
+        "symfony/dotenv": "^3.4",
         "symfony/maker-bundle": "^1.1",
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/web-server-bundle": "^4.0"
+        "symfony/phpunit-bridge": "^3.4",
+        "symfony/web-server-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
@@ -40,11 +48,17 @@
     },
     "replace": {
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
+        "route":"php bin/console debug:router",
+        "cache":"php bin/console cache:clear",
+        "diff": "php bin/console doctrine:migrations:diff",
+        "migrate": "php bin/console doctrine:migrations:migrate",
+        "doc":"php phpDocumentor.phar -d src/Controller -d src/Entity -d src/Util -t docs ",
+        "svalidate": "php bin/console doctrine:schema:validate",
+
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
@@ -62,7 +76,7 @@
     },
     "extra": {
         "symfony": {
-            "id": "01C7BCW41YM7QV9HXEEVFQNYEM",
+            "id": "01C7TQVHY28YKNHXKRHD03661Q",
             "allow-contrib": false
         }
     }
