--- a/WFD/composer.json
+++ b/WFD/composer.json
@@ -8,6 +8,7 @@
         "koff/crud-maker-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
