--- a/.env.dist
+++ b/.env.dist
@@ -12,6 +12,6 @@ APP_SECRET=7ed1521e5b83adf666916f0dcd55afd3
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Configure your db driver and server_version in config/packages/doctrine.yaml
+# Configure your db driver and server_version in config/packages/doctrine.yamlbin
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/burger
 ###< doctrine/doctrine-bundle ###
